Update scala to 2.13.18, sbt to 2.12.5 and Java to be 21 as the minimum